Layout issues (home page and buttons) (#100)
* spacing changes on home

* Update buttons and home page

* Update index.tsx

* Update style.less

--- a/src/components/layouts/home-layout/style.less
+++ b/src/components/layouts/home-layout/style.less
@@ -6,6 +6,18 @@
 .landing {
   .homebackground('home_landing');
 }
+.Home {
+  .d4sdsubtitle {
+    margin-top: @margin-base;
+  }
+  .d4sdmaintitle {
+    margin-top: @margin-base * 2;
+  }
+  .d4sd-content {
+    margin-top: @margin-base * 2;
+  }
+
+}
 
 // Section 3
 .challenges {
